<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>ShimejiEE</name>
    <groupId>com.group_finity</groupId>
    <artifactId>ShimejiEE</artifactId>
    <version>1.1.1</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.main>com.group_finity.mascot.Main</project.main>
        <project.finalShimejiOut>${project.build.directory}/${project.name}-${project.version}</project.finalShimejiOut>
    </properties>

    <dependencies>
        <!--  temporary -->
        <dependency>
            <groupId>com.sun.jna</groupId>
            <artifactId>examples</artifactId>
            <version>unknown</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/ext-resources/lib/examples.jar</systemPath>
        </dependency>
        <!--   Not sure about the version but it compiles + i plan to remove it eventually    -->
        <dependency>
            <groupId>org.netbeans.external</groupId>
            <artifactId>AbsoluteLayout</artifactId>
            <version>RELEASE90</version>
        </dependency>

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>3.1.0</version>
        </dependency>

        <dependency>
            <groupId>org.openjdk.nashorn</groupId>
            <artifactId>nashorn-core</artifactId>
            <version>15.3</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--   Copy external resources to build folder   -->
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <id>copy-ext-resources</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.finalShimejiOut}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>ext-resources</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!--     create shaded jar       -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <outputFile>${project.finalShimejiOut}/${project.name}.jar</outputFile>
                            <shadedArtifactAttached>false</shadedArtifactAttached>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>${project.main}</Main-Class>
                                        <!--    The examples jar needs to be here since system scoped deps don't get extracted     -->
                                        <Class-Path>./ img/ conf/ ./lib/examples.jar</Class-Path>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!--     Running       -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.3.2</version>
                <configuration>
                    <executable>java</executable>
                    <workingDirectory>${project.finalShimejiOut}/</workingDirectory>
                    <arguments>
                        <argument>-jar</argument>
                        <argument>${project.finalShimejiOut}/${project.name}.jar</argument>
                    </arguments>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>